written edits made

--- a/STA440_Individual_Project.Rmd
+++ b/STA440_Individual_Project.Rmd
@@ -14,15 +14,17 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 
 ## Background
 
-Despite Major League Baseball being one of the largest and most popular professional sports leagues in America, recent criticisms have grown in regard to the pace of the game and its relative lack of action compared to other sports. In recent years, the game has seen the growth of the three outcome at-bat, meaning that many batters are trending towards either hitting homeruns, striking out, or walking. This comes from batters prioritizing launch angle and the greater addition to expected runs contributed from homeruns than batted balls in play. Although these extra homeruns are exciting for fans, the number of strikeouts increasing has the opposite effect. With long games and increasingly rare action from batted balls in play, the MLB has started looking into potential solutions to fix the pace of game dissatisfaction from fans.
+Despite Major League Baseball being one of the largest and most popular professional sports leagues in America, recent criticisms have grown in regard to the pace of the game and its relative lack of action compared to other sports. In recent years, the game has seen the growth of the three outcome at-bat, meaning that many batters are trending towards either hitting homeruns, striking out, or walking (MLB.com, Three True Outcomes). This comes from batters prioritizing launch angle and the greater addition to expected runs contributed from homeruns than batted balls in play. Although these extra homeruns are exciting for fans, the number of strikeouts increasing has the opposite effect. With long games and increasingly rare action from batted balls in play, MLB has started looking into potential solutions to fix the pace of game dissatisfaction from fans.
 
 Already there are rules being added for the 2022 season in attempts to address the decrease in action, such as the elimination of the infield shift which was responsible for taking away many base hits by left-handed batters. MLB has also implemented a pitch clock in attempts to speed up the game. Still, much of the discussion about 'fixing baseball' has been made around the strike zone. Automated ball and strike calls seem to be where the game is headed, but there are also talks of changing the strike zone all together.
 
-Changes to the strike zone have been made before in the past, with the last official update to the strike zone being in 1996 when it was defined as the "the midpoint between a batter's shoulders and the top of the uniform pants -- when the batter is in his stance and prepared to swing at a pitched ball -- and a point just below the kneecap" (MLB.com). Additionally, and especially with this indistinct wording, the strike zone as it has been called by umpires has shifted without updates to the rules. For example, from 2007 to 2017 umpires have narrowed but lengthened their strikes zones (Edwards 2018). But what associations does the strike zone have on batted balls in play? Although shifting the strike zone up or down would be a slowly implemented change that would have to begin with lower levels and younger players so as to not cause injury, are either of these options reasonable for increasing action?
+Changes to the strike zone have been made before in the past, with the last official update to the strike zone being in 1996 when it was defined as the "the midpoint between a batter's shoulders and the top of the uniform pants -- when the batter is in his stance and prepared to swing at a pitched ball -- and a point just below the kneecap" (MLB.com, Strikezone). Additionally, and especially with this indistinct wording, the strike zone as it has been called by umpires has shifted without updates to the rules. For example, from 2007 to 2017 umpires have narrowed but lengthened their strikes zones (Edwards 2018). But what associations does the strike zone have on batted balls in play?
 
-## Research Question
+## Research Questions
 
 In this analysis, I aim to investigate the association between high or low strikes and the odds that hitting said strike into play results in getting on base. Specifically, I hypothesize that hitting a low strike decreases the odds of a successful batted ball.
+
+Separately, this analysis will also be looked at through the lens of the following question: Although shifting the strike zone up or down would be a slowly implemented change that would have to begin with lower level leagues and younger players so as to not cause injury or upset among players, are either of these options reasonable for increasing action?
 
 
 ## Data
@@ -31,7 +33,7 @@ In this analysis, I aim to investigate the association between high or low strik
 
 This analysis uses 2021 Statcast data from Bill Petti's `baseballr` package. This data contains pitch-level information, including a separate observation for each pitch during the season, including pre-season, regular season, and post-season games. In 2021, alone, this includes 797,290 pitches, each with 93 recorded variables. Statcast technology was introduced in all 30 MLB stadiums in 2015, and has since recorded information about each pitch, the game situation of that pitch, and other player/inning related context. Because this analysis focuses only on balls batted into play, this original dataset is filtered down greatly.
 
-First the daata was filtered to only include regular season and post-season games (excluding exhibition and Spring training games). This was done to eliminate practice games and other games that may not represent a true competitive game. Next, the data was filtered to only included batters with at least 50 at-bats in order to increase the consistency in the quality of at-bats. This was done by counting players with at least 50 at-bat ending events (Appendix A) recorded in the data, then filtering the data for only those players. By using this threshold I eliminate any players that were only called to the majors briefly or players that may not have been good/healthy enough to start frequently. Because I was only interested in comparing the odds of a successful batted ball given that the ball was put in play, I filtered for observations of type "X" which represent batted balls events. This also handled the issue of making sure I don't consider multiple strikes during an at-bat as it is inherently only possible for a batter to hit one pitch they face into play and it is not necessary to hit every strike faced. I also filtered for only high strikes, which were originally labeled to be in zone 1, 2, or 3, or low strikes, which were originally labeled to be in zone 7, 8, or 9. I did this because pitchers generally avoid trying to pitch down the middle as it is easier to hit, but also because I am strictly interested in the difference in the relationships between high and low strikes and the odds of a successful hit. In order to further focus on this goal, I also recoded the zone variable to refer only to the vertical location, with zones 1, 2, and 3 relabeled as high strikes and zones 7, 8, and 9 relabeled as low strikes. I also made the decision to filter for only plays where there was no infield shift. This choice was made with consideration for the fact that the infield shift will no longer be allowed in future seasons. Even though I am not attempting to predict for the future, my goal is still to observe the relationship between pitch location and the odds of a successful ball in play in a way that might be insightful to the possibility of future strikezone changes. With as much data as this still leaves me, I do not believe it will hinder my results and will better allow me to examine the relevant associations on against standard defenses. Lastly, I chose to filter out Eephus pitches (EP), knuckle balls (KN), and screwballs (KC) due to their rarity or inconsistent pitch movement. I also removed pitches labeled as "FA" or "CS" as their occurrance was rare and it is not clear what type of pitch they represent (Visualization and detailed list of pitch types can be found in the Appendix B). I also simplified pitch type to just fastballs (4-seam fastballs, splittlers/split fastballs, sinkers/2-seam fastballs, and cutters), changeups, and breaking balls (curveballs, knuckle curves, and sliders) as this is often how they are examined by MLB and I do not wish to oversaturate my model with different pitch types.
+First the daata was filtered to only include regular season and post-season games (excluding exhibition and Spring training games). This was done to eliminate practice games and other games that may not represent a true competitive game. Next, the data was filtered to only included batters with at least 50 at-bats in order to increase the consistency in the quality of at-bats. This was done by counting players with at least 50 at-bat ending events (Appendix A) recorded in the data, then filtering the data for only those players. By using this threshold I eliminate any players that were only called to the majors briefly or players that may not have been good/healthy enough to start frequently. Because I was only interested in comparing the odds of a successful batted ball given that the ball was put in play, I filtered for observations of type "X" which represent batted balls events. This also handled the issue of making sure I don't consider multiple strikes during an at-bat as it is inherently only possible for a batter to hit one pitch they face into play and it is not necessary to hit every strike faced. I also filtered for only high strikes, which were originally labeled to be in zone 1, 2, or 3, or low strikes, which were originally labeled to be in zone 7, 8, or 9. I did this because pitchers generally avoid trying to pitch down the middle as it is easier to hit, but also because I am strictly interested in the difference in the relationships between high and low strikes and the odds of a successful hit. In order to further focus on this goal, I also recoded the zone variable to refer only to the vertical location, with zones 1, 2, and 3 relabeled as high strikes and zones 7, 8, and 9 relabeled as low strikes. I also made the decision to filter for only plays where there was no infield shift. This choice was made with consideration for the fact that the infield shift will no longer be allowed in future seasons. Even though I am not attempting to predict for the future, my goal is still to observe the relationship between pitch location and the odds of a successful ball in play in a way that might be insightful to the possibility of future strikezone changes. With as much data as this still leaves me, I do not believe it will hinder my results and will better allow me to examine the relevant associations on against standard defenses. Lastly, I chose to filter out Eephus pitches (EP), knuckle balls (KN), and screwballs (KC) due to their rarity or inconsistent pitch movement. I also removed pitches labeled as "CS" as their occurrance was rare and it is not clear what type of pitch they represent (Visualization and detailed list of pitch types can be found in the Appendix B). Although fastballs recorded as "FA" also appear to be rare, I simply grouped these in with other types of fastballs. I also simplified pitch type to just fastballs (general fastballs, 4-seam fastballs, splitters/split fastballs, sinkers/2-seam fastballs, and cutters), changeups, and breaking balls (curveballs, knuckle curves, and sliders) as this is often how they are examined by MLB and I do not wish to oversaturate my model with different pitch types.
 
 
 
@@ -84,22 +86,25 @@ statcast_data_filtered <- statcast_data_2021 %>%
   mutate(zone_high_low = case_when(zone %in% c(1,2,3) ~ "High Strike",
                                    zone %in% c(7,8,9) ~ "Low Strike")) %>%
   filter(batter %in% batters_w_50_atbats) %>%
-  filter(pitch_type != "EP", pitch_type != "KN", pitch_type != "FA", pitch_type != "CS") %>%
+  filter(pitch_type != "EP", pitch_type != "KN", pitch_type != "CS") %>%
   mutate(pitch_type = fct_recode(pitch_type,
                                     "Fastball" = "FC",
                                     "Fastball" = "FF",
                                     "Fastball" = "FS",
                                     "Fastball" = "SI",
+                                    "Fastball" = "FA",
                                     "Changeup" = "CH",
                                     "Breaking ball" = "CU",
                                     "Breaking ball" = "KC",
                                     "Breaking ball" = "SL")) %>%
   mutate(pitch_type = factor(pitch_type, levels = c("Fastball", "Changeup", "Breaking ball"))) 
+
+#pitch_type != "FA", 
 ```
 
 ## EDA
 
-Because of the vague wording of the definition of the strikezone and the dependency the called strikezone has on the judgement of the umpire, I have included a plot displaying the X and Z coordinates of all high and low strikes relevant to this analysis. In this case, the x-axis refers to the horizontal distance of the pitch from the center of home plate (in ft) while the y-axis refers to the height of the pitch (in ft) as it crosses home plate. This plot helps us visualize the difference between high and low strikes as was observed in 2021. As there is no definitive cutoff for the top or bottom of the strikezone, understanding the observed heights of these strikes is important to understanding how pitch location may be related to balls in play. As is shown, the observed bottom of the strikezone appears to be slightly below 1.5 ft while the observed top of the strikezone appears to be slightly above 3.5 ft. Noticably, the both the observed top and bottom of the strikezone appear to be around a foot in height each, which is taller than the portion of the strikezone deemed the vertical middle.
+Because of the vague wording of the definition of the strikezone and the dependency the called strikezone has on the judgement of the umpire, I have included a plot displaying the X and Z coordinates of all high and low strikes relevant to this analysis. In this case, the x-axis refers to the horizontal distance of the pitch from the center of home plate (in ft) while the y-axis refers to the height of the pitch (in ft) as it crosses home plate. This plot helps us visualize the difference between high and low strikes as was observed in 2021. As there is no definitive cutoff for the top or bottom of the strikezone, understanding the observed heights of these strikes is important to understanding how pitch location may be related to balls in play. As is shown, the observed bottom of the strikezone appears to be slightly below 1.5 ft while the observed top of the strikezone appears to be slightly above 3.5 ft. Noticeably, both the observed top region and bottom region of the strikezone appear to be around a foot in height each, which is taller than the portion of the strikezone deemed the vertical middle.
 
 ```{r fig.height = 3}
 statcast_data_filtered %>%
@@ -163,9 +168,9 @@ sampled_statcast_data %>%
 
 # Methodology
 
-To explore the relationship between the vertical location of a pitch and whether the hit resulted in a successful batted ball, it is necessary to account for pitch characteristics that I expect may be associated with greater/reduced odds of the resulting batted ball being successful based on my existing knowledge of baseball and batting. First, I control for player relevant characteristics like pitcher handedness and batter stance side as these are characteristics relevant to each event of a batted ball and vary from pitcher to pitcher and batter to batter. I also control for the release speed of the pitch and the type of pitch as these characteristics are likely to have some association with the difficulty of hitting a given pitch. Controlling for the launch speed of the ball off the bat aims to account for the strength of the batter and caliber of contact (solid vs. weak) and also the assumption that the strength of the hit likely has some association with the success of the hit. Lastly, the type of hit is controlled for as different types of hits require different types of plays to be made by the defense and the difficulty of these plays potentially contribute to the odds that hit is successful. In our correlation plot (Appendix D), we see that there are generally low correlations between all of the covariates in our model. Note that low strikes and high strikes have a perfect correlation of -1 by design of the analysis, so we disregard this value. Also note that there are two other instances with correlations equal to or less than -0.5, but these either only show moderate correlation with a single level of a categorical variable (release speed and breaking balls) or events that would not occur at the same time (line drives and ground balls), so these variables are left in the model.
+To explore the relationship between the vertical location of a pitch and whether the hit resulted in a successful batted ball, it is necessary to account for pitch characteristics that I expect may be associated with greater/reduced odds of the resulting batted ball being successful, based on my existing knowledge of baseball and batting. First, I control for player relevant characteristics like pitcher handedness and batter stance side as these are characteristics relevant to describing each batted ball event and could potentially help explain patterns in the data that may differ by pitcher or batter handedness. I also control for the release speed of the pitch and the type of pitch as these characteristics are likely to have some association with the difficulty of hitting a given pitch. Controlling for the launch speed of the ball off the bat aims to account for the strength of the batter and caliber of contact (solid vs. weak contact) and also the assumption that the strength of the hit likely has some association with the success of the hit. According to the apparent nonlinear relationship between launch angle and the log odds of a successful batted ball, this variable has been transformed by a power of 5 as is discussed in Model Assumptions. Lastly, the type of hit is controlled for as different types of hits require different types of plays to be made by the defense and the difficulty of these plays potentially contribute to the odds that a hit is successful. In our correlation plot (Appendix D), we see that there are generally low correlations between all of the covariates in our model. Note that low strikes and high strikes have a perfect correlation of -1 by design of the analysis, so we disregard this value. Also note that there are two other instances with correlations equal to or less than -0.5, but these either only show moderate correlation with a single level of a categorical variable (release speed and breaking balls) or events that would not occur at the same time (line drives and ground balls), so these variables are left in the model.
 
-In addition to the main effects described above, I believe interaction effects between the type of batted ball and the pitch location (high/low) would also be interesting to examine. Specifically, I know from personal experience and background knowledge that it is more natural to hit high pitches up and more natural to hit low pitches down based on swing angles. This is why I suspect that different types of batted balls with different pitch locations may have different associations with the odds of that batted ball resulting in the batter successfully getting on base.  For example if a high pitch is hit into the ground as a ground ball, this may be associated with a worse hit or weaker contact which would assumingly be less likely to result in successfully getting on base.
+In addition to the main effects described above, I believe interaction effects between the type of batted ball and the pitch location (high/low) would also be interesting to examine. Specifically, I know from personal experience and background knowledge that it is more natural to hit high pitches up and more natural to hit low pitches down based on swing angles. This is why I suspect that different types of batted balls with different pitch locations may have different associations with the odds of that batted ball resulting in the batter successfully getting on base. I theorize that these batted ball type and pitch location pairings may have some correlation with the strength of contact (solid vs. weak contact) or other descriptive measures of the hit, which might contribute to different associations with the odds of a successful batted ball.
 
 In this analysis, I consider each of the described pitcher and batter characteristics, pitch characteristics, hit characteristics, and interaction terms to be important covariates to account for in order to investigate whether there is an association between the pitch being a high or low strike and the odds of the resulting batted ball event being successful. I proceed with a logistic regression model for a few reasons. For starters, the logistic regression model is appropriate to use when the response variable is binary, as the pitch-level BABIP is. Second, I am interested in the association between these predictors and the odds of a batted ball event being successful and the logistic regression model can be easily interpreted in such a way. However, my confidence in the results of this model are potentially limited by the violation of certain model assumptions/diagnostics as I discuss in the following Assumptions and Diagnostics section.
 
@@ -193,9 +198,9 @@ logit_model <- glm(babip_value ~ zone_high_low + pitch_type + release_speed + st
 
 ### Model Assumptions and Diagnostics
 
-One assumtion of a logistic regression is the independence of obvservations included in the data. This independence assumption is violated due to there being multiple observations for the same batter and multiple observations for the same pitcher. Although the scope of the data is also limited to only a single pitch per at-bat, there are still multiple observations per game and team. Situational elements like score, outs, weather, defense, etc. also potentially contribute to non-independence. Still, considering the mentality of players that one play should not affect the next and the relative randomness of sports data, I chose to continue with this model under the assumption that the data may not be completely dependent on each other. However, this violation of independence will affect confidence in my results, as is discussed in Limitations.
+One assumption of a logistic regression is the independence of observations included in the data. This independence assumption is violated due to there being multiple observations for the same batter and multiple observations for the same pitcher. Although the scope of the data is also limited to only a single pitch per at-bat, there are still multiple observations per game and team. Situational elements like score, outs, weather, defense, etc. also potentially contribute to non-independence. Still, considering the mentality of players that one play should not affect the next and the relative randomness of sports data, I chose to continue with this model under the assumption that the data may not be completely dependent on each other. However, this violation of independence will affect confidence in my results, as is discussed in Limitations.
 
-The logistic model assumes that there is a linear relationship between the logit of the outcome and each predictor variable. To check the linearity assumption, empirical logit plots were observed to assess the relationships between the continuous predictor variables launch speed and release speed and the log odds of the outcome variable (Appendix E). In regard to the empirical logit plot for release speed, it appears that release speed is relatively linearly associated with the log odds of whether batted balls are successful or not. However, because the empirical logit plot for launch speed shows linearity being violated considering the presence of a moderately strong "U" shape, it is evident that launch speed does not have a linear relationship with the log odds of whether batted balls are successful or not. To avoid this linearity violation, I instead include a transformed version of launch speed (launch speed$~^5$) as it has a much more linear relationship with the log odds of whether batted balls are successful or not.
+The logistic model assumes that there is a linear relationship between the logit of the outcome and each predictor variable. To check the linearity assumption, empirical logit plots were observed to assess the relationships between the continuous predictor variables launch speed and release speed and the log odds of the outcome variable (Appendix E). In regard to the empirical logit plot for release speed, it appears that release speed is relatively linearly associated with the log odds of whether batted balls are successful or not. However, because the empirical logit plot for launch speed shows linearity being violated considering the presence of a strong "U" shape, it is evident that launch speed does not have a linear relationship with the log odds of whether batted balls are successful or not. To avoid this linearity violation, I instead include a transformed version of launch speed (launch speed$~^5$) as it has a much more linear relationship with the log odds of whether batted balls are successful or not.
 
 In assessing the fit of this model and its inferential purpose, I chose to examine the binned deviance residuals as a method of providing a rough idea of model fit (Appendix F). I decided to use deviance residuals rather than standardized residuals because the model is a generalized linear model (GLM) seeking to maximize the log likelihood function and thus deviance is a useful goodness-of-fit statistic. A small bin width of 0.01 was used to ensure many bins of average residuals vs average fitted value, allowing us to summarize our model fit while still showing more localized patterns in deviance residuals. Typically, we would expect these binned deviance residuals to be scattered around 0 to suggest good model fit. However, when examining this model, the binned deviance residuals show a oscillating pattern. Despite this just being one way to assess goodness-of-fit, it is important to acknowledge that there may be additional explanatory variables not included in the model that would help explain these patterns in deviance. Although this model is not a perfect fit, I will proceed to discuss the relationships suggested by the model, as they still offer some insight into my research question. Moving forward, however, it is necessary to keep in mind the presence of additional patterns unexplained by my model and how this potentially detracts from confidence in my results.
 
@@ -238,12 +243,12 @@ model_output_full
 ```
 
 
-In examining the results of the logistic regression model (Table 1 above), I was first interested in examining associations between the odds of a successful batted ball event and the location of the pitch, high or low. I found evidence of a significant association between the vertical pitch location and the odds of a successful batted ball, holding all other variables constant. That is, for pitches that resulted in a pop fly, I found that those that were low strikes were expected to have 1.164 times the odds of being a successful hit compared to a high strike. We found that the confidence interval for this estimate does not cross 1 ([1.002, 1.354]), so there is evidence of significant association between the odds of a successful hit and vertical pitch location, for these pitches.
+In examining the results of the logistic regression model (Table 1 above), I was first interested in examining associations between the odds of a successful batted ball event and the location of the pitch, high or low. I found evidence of a significant association between the vertical pitch location and the odds of a successful batted ball, holding all other variables constant. That is, for pitches that resulted in a fly ball, I found that those that were low strikes were expected to have 1.163 times the odds of being a successful hit compared to a high strike. We found that the confidence interval for this estimate does not cross 1 ([1.002, 1.350]), so there is evidence of significant association between the odds of a successful hit and vertical pitch location, for these pitches.
 
 
-However, I then proceeded to look closer into pitch location by looking at interaction effects between whether the pitch was a high or low strike and the type of batted ball. In doing so, I found evidence of a significant association between the pitch location and the batted ball being a ground ball, with all other variables held constant. That is, for pitches that are low strikes, batted balls that are ground balls are expected to have 1.907 [1.627, 2.237] times the odds of being a successful hit compared to those resulting from a high strike. That means that ground balls are associated with higher odds of a successful hit when the pitch is a low strike, but separately ground balls on low strikes do not seem to be associated with as great of a positive increase to the odds in comparison to other types of batted balls on low strikes. This is interesting because although the increase in the odds is expected according to my original justification of including this interaction effect, its comparison to the interaction effects of other types of batted balls on low strikes is not something I had expected.
+However, I then proceeded to look closer into pitch location by looking at interaction effects between whether the pitch was a high or low strike and the type of batted ball. In doing so, I found evidence of a significant association between the pitch location and the batted ball being a ground ball, with all other variables held constant. That is, for pitches that are low strikes, batted balls that are ground balls are expected to have 1.905 [1.627, 2.230] times the odds of being a successful hit compared to those resulting from a high strike. That means that ground balls are associated with higher odds of a successful hit when the pitch is a low strike, but separately ground balls on low strikes do not seem to be associated with as great of a positive increase to the odds in comparison to other types of batted balls on low strikes. This is interesting because although the increase in the odds is expected according to my original justification of including this interaction effect, its comparison to the interaction effects of other types of batted balls on low strikes is not something I had expected.
 
-Among the variables I controlled for, I noticed that oh high strikes, the type of batted ball has significant associations with the odds of a successful hit. Holding all other variables in the model constant, for high strikes resulting in line drives the odds of a successful hit are expected to increase by a factor of 14.215 ([12.470,16.239]) compared to fly balls. This made sense as line drives are typically hard hit balls but lack the elevation that potentially allows the defense higher chances of making a catch. Holding all other variables in the model constant, for high strikes resulting in ground balls the odds of a successful hit are expected to increase by a factor of 4.124 ([3.621, 4.706]) compared to fly balls. I was slightly surprised by this relationship in comparison to fly balls because it suggests ground balls are more likely to result in a successful hit that a fly ball on high strikes. As fly balls are often the byproduct of failed homerun attempts, this association supports the idea that aiming to put balls in play rather than prioritizing homeruns may increase game action due to more successful balls in play. Holding all other variables in the model constant, for high strikes resulting in popups the odds of a successful hit are expected to decrease by a factor of 0.193 ([0.120, 0.293]) compared to fly balls. This is not surprising at all as popups are simply fly balls that don't reach the outfield, and with a higher density of infielders than outfielders in their respective areas, they are more likely to be caught.
+Among the variables I controlled for, I noticed that for high strikes, the type of batted ball has significant associations with the odds of a successful hit. Holding all other variables in the model constant, for high strikes resulting in line drives the odds of a successful hit are expected to increase by a factor of 14.353 ([12.603, 16.381]) compared to fly balls. This made sense as line drives are typically hard hit balls but lack the elevation that potentially allows the defense higher chances of making a catch. Holding all other variables in the model constant, for high strikes resulting in ground balls the odds of a successful hit are expected to increase by a factor of 4.146 ([3.643, 4.727]) compared to fly balls. I was slightly surprised by this relationship in comparison to fly balls because it suggests ground balls are more likely to result in a successful hit than a fly ball on high strikes. As fly balls are often the byproduct of failed homerun attempts, this association supports the idea that aiming to put balls in play rather than prioritizing homeruns may increase game action due to more successful balls in play. Holding all other variables in the model constant, for high strikes resulting in popups the odds of a successful hit are expected to decrease by a factor of 0.192 ([0.119, 0.292]) compared to fly balls. This is not surprising at all as popups are simply fly balls that don't reach the outfield, and with a higher density of infielders than outfielders in their respective areas, they are more likely to be caught.
 
 Interestingly, there was not evidence of statistically significant associations between the odds of a successful batted ball and pitcher related variables like the pitcher handedness, the release speed, or the type of pitch.
 
@@ -258,7 +263,7 @@ While these are interesting observations, it is important to consider that chang
 
 The limitations of this research mainly lie in the scope of my research question and the model. To start, the intense filtering of the data prior to beginning my analysis may have prevented my model's ability to fully capture patterns in the data relevant to high and low strikes. For example, plays with an infield shift in place may have observed different associations or patterns that I missed by choosing to focus on plays with defensive alignments following rules that are soon to be implemented. I aimed to preserve the interpretability of this logistic regression model by limiting the examined scenarios and by only selecting variables that would allow me to do so. Thus, there are other possible covariates that might have improved this analysis had I controlled for them (such as pitch spin rate or launch angle), which I chose not to prioritize in this research.
 
-Another limitation of our model is its reliance on defensive action and skill. Because I chose to only consider balls hit in play, the deciding factor of if it is a successful hit or not depends on if the defensive was successful in playing the ball and getting the batter out. Without quantifying or controlling for the defense's contribution to the play outcome, this analysis may be missing additional patterns in the data.
+Another limitation of this model is its reliance on defensive action and skill. Because I chose to only consider balls hit in play, the deciding factor of whether the hit is successful or not depends on if the defense was successful in playing the ball and getting the batter out. Without quantifying or controlling for the defense's contribution to the play outcome, this analysis may be missing additional patterns in the data.
 
 Also, it is crucial to consider the assumption violations this model makes in regards to independence. As this data includes repeated observations with the same pitcher and repeated observations with the same batter, the observations are not completely independent. However, because I was not interested in the variation within or between these players and their tendencies, I chose to proceed with the model as is. I made this decision in part due to guidance I have received in the past from professional baseball analysts, considering different at-bats to be at least relatively independent due to situational differences and the inherent randomness of sports. Still, it is necessary to place emphasis on the fact that confidence in my results and interpretations must be hedged due to this independence violation.
 
@@ -280,7 +285,9 @@ Petti B, Gilani S (2022). baseballr: Acquiring and Analyzing Baseball Data. http
 
 Sarris, E. (2017, August 18). How would we increase balls in play? FanGraphs Baseball. Retrieved December 16, 2022, from https://blogs.fangraphs.com/how-would-we-increase-balls-in-play/ 
 
-Strike zone: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/rules/strike-zone 
+Strikezone: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/rules/strike-zone 
+
+Three True Outcomes: Glossary. MLB.com. (n.d.). Retrieved December 16, 2022, from https://www.mlb.com/glossary/idioms/three-true-outcomes
 
 What are the pitch types generated from MLB Statcast for speed of pitch? Daktronics. (n.d.). Retrieved December 16, 2022, from https://www.daktronics.com/en-us/support/kb/DD3312647 
 
@@ -316,7 +323,7 @@ statcast_data_2021 %>%
 
 The following are the Pitch Types generated:
 
-- AB Automatic Ball, AS Automatic Strike, CH Change-up, CU Curveball, EP Eephus, FC Cutter, FF Four-Seam Fastball, FO Forkball, FS Splitter, FT Two-Seam Fastball (synonymous with SI), GY Gyroball, IN Intentional Ball, KC Knuckle Curve, KN Knuckleball, NP No Pitch, PO Pitchout, SC Screwball, SI Sinker (synonymous with FT), SL Slider
+- AB Automatic Ball, AS Automatic Strike, CH Change-up, CU Curveball, EP Eephus, FA Fastball, FC Cutter, FF Four-Seam Fastball, FO Forkball, FS Splitter, FT Two-Seam Fastball (synonymous with SI), GY Gyroball, IN Intentional Ball, KC Knuckle Curve, KN Knuckleball, NP No Pitch, PO Pitchout, SC Screwball, SI Sinker (synonymous with FT), SL Slider
 
 ```{r}
 statcast_data_2021 %>%
